Version: 0.1.5
Date: 2020.11.11
  Changes:
    - A Parachute can now also be used to avoid damage when unsafe-landing from a Jump Pad
  Gui:
    - Added Tier markers for the HUB tiers
  Bugfixes:
    - Better handling of "research recipes" that are already done
    - When the last entity of a Hypertube is an Underground, you exited at the wrong spot
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2020.11.13
  Features:
    - The start of Freeplay is now Onboarding, with objective-based tutorial to get you started.
  Bugfixes:
    - Catastrophic bug after save/load! Whoops! So all save files are kinda knackered...
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2020.11.14
  Features:
    - "Starting area size" now affects the distance at which nodes are only minimally guarded
  Gui:
    - Added "flow rate" GUI when opening pipes
  Bugfixes:
    - As HUB Upgrade milestones are completed, the HUB now checks for collision with the player.
    - Smart/Programmable splitters weren't saved correctly.
    - Mk.2 pipes etc. were giving back Mk.1 items on removal
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2020.11.19
  Changes:
    - Screw removed as an independent item and now just replaces Iron Gear
  Bugfixes:
    - Power Slugs that are covered by Huge Rocks are now, in fact, covered
    - Space Elevator crash fixed
    - Space Elevator "rocket silo" entity is now not selectable
    - Better handling of potentially incompatible mods
    - Items on belts are now masked properly by freight platforms
    - Various fixes and optimisations
  Modding:
    - Added framework for mod compatibility scripts
    - Compatible with Construction Drones
    - Compatible with Factorissimo 2