@@ -235,7 +235,7 @@ pipeline-junction-cross-mk-2=[font=default-semibold][color=#ffe6c0]Max. flow rat
 pump=[font=default-semibold][color=#ffe6c0]Max. flow rate:[/color][/font] 300/m\n[font=default-semibold][color=#ffe6c0]Max. recommended pipe length:[/color][/font] 20
 pipeline-pump-mk-2=[font=default-semibold][color=#ffe6c0]Max. flow rate:[/color][/font] 600/m\n[font=default-semibold][color=#ffe6c0]Max. recommended pipe length:[/color][/font] 50
 valve=Used to limit __ITEM__pipe__ flow rates and/or prevent backflow.\n[font=default-semibold][color=#ffe6c0]Current flow:[/color][/font]
-foundation=Provides a flat floor to build your factory on.\n[font=default-semibold][color=#ffe6c0]Movement speed:[/color][/font] +30%\n[font=default-semibold][color=#ffe6c0]Use the Deconstruct Foundation tool ([/color][/font]__CONTROL__deconstruct-foundation__[font=default-semibold][color=#ffe6c0]) to mark for removal.[/color][/font]
+foundation=Provides a flat floor to build your factory on. Snaps to nearby Foundations.\n[font=default-semibold][color=#ffe6c0]Movement speed:[/color][/font] +30%\n[font=default-semibold][color=#ffe6c0]Use the Deconstruct Foundation tool ([/color][/font]__CONTROL__deconstruct-foundation__[font=default-semibold][color=#ffe6c0]) to mark for removal.[/color][/font]
 jump-pad=Propels you forwards through the air. Make sure you land softly.\n__CONTROL__toggle-driving__: Launch\n__CONTROL__open-gui__: Show trajectory\n__CONTROL__smaller-terrain-building-area__: Reduce range (min. 4)\n__CONTROL__larger-terrain-building-area__: Increase range (max. 40)
 u-jelly-landing-pad=Generates a speed dampening jelly. Guarantees a soft landing.
 hyper-tube-entrance=Enter the __ITEM__hyper-tube__ with __CONTROL__toggle-driving__.
@@ -789,7 +789,7 @@ pipeline-junction-cross-mk-2=[font=default-semibold][color=#ffe6c0]Max. flow rat
 pump=[font=default-semibold][color=#ffe6c0]Max. flow rate:[/color][/font] 300/m\n[font=default-semibold][color=#ffe6c0]Max. recommended pipe length:[/color][/font] 20
 pipeline-pump-mk-2=[font=default-semibold][color=#ffe6c0]Max. flow rate:[/color][/font] 600/m\n[font=default-semibold][color=#ffe6c0]Max. recommended pipe length:[/color][/font] 50
 valve=Used to limit __ITEM__pipe__ flow rates and/or prevent backflow.
-foundation=Provides a flat floor to build your factory on.\n[font=default-semibold][color=#ffe6c0]Movement bonus:[/color][/font] 30%
+foundation=Provides a flat floor to build your factory on. Snaps to nearby Foundations.\n[font=default-semibold][color=#ffe6c0]Movement bonus:[/color][/font] 30%
 hyper-tube-entrance=Enter the __ITEM__hyper-tube__ with __CONTROL__toggle-driving__.
 ; organisation
 wooden-chest=Contains 25 slots for storing large amounts of items.\n[font=default-semibold][color=#ffe6c0]Requires manual interaction.[/color][/font]
