@@ -1,3 +1,5 @@
+local math2d = require("math2d")
+
 local foundation = "foundation"
 local tile = "stone-path"
 
@@ -5,19 +7,51 @@ local function onBuilt(event)
 	local entity = event.created_entity or event.entity
 	if not entity or not entity.valid then return end
 	if entity.name == foundation then
-		-- add tiles underneath this
-		local tiles = {}
-		for dx=-1.5,1.5,1 do
-			for dy=-1.5,1.5,1 do
-				table.insert(tiles,{name=tile,position={entity.position.x+dx,entity.position.y+dy}})
+		-- look for foundations to snap to
+		for _,dir in pairs({defines.direction.north, defines.direction.east, defines.direction.south, defines.direction.west}) do
+			local vector = math2d.position.rotate_vector({0,-4}, dir*45)
+			local target = math2d.position.add(entity.position, vector)
+			local snapto = entity.surface.find_entity(foundation, target)
+			if snapto then
+				-- if the position matches the expected position (to within an epsilon due to rotation and floats...) then we're good
+				if math2d.position.distance_squared(target, snapto.position) > 0.1 then
+					-- figure out where to snap to
+					local snapped = math2d.position.subtract(snapto.position, vector)
+					-- place a ghost first so that the new entity won't try to re-snap
+					entity.surface.create_entity{
+						name = "entity-ghost",
+						inner_name = foundation,
+						position = snapped,
+						force = entity.force
+					}
+					entity.surface.create_entity{
+						name = foundation,
+						position = snapped,
+						force = entity.force,
+						raise_built = true
+					}
+					entity.destroy()
+				end
+				-- else position matches so we're already snapped to a foundation
+				break
 			end
 		end
-		entity.surface.set_tiles(tiles, true, false, true, true)
-		local fish = entity.surface.find_entities_filtered{area=entity.selection_box, type="fish"}
-		for _,f in pairs(fish) do
-			f.destroy()
+
+		if entity.valid then
+			-- if the snapping code hasn't destroyed the entity, then add tiles underneath
+			local tiles = {}
+			for dx=-1.5,1.5,1 do
+				for dy=-1.5,1.5,1 do
+					table.insert(tiles,{name=tile,position={entity.position.x+dx,entity.position.y+dy}})
+				end
+			end
+			entity.surface.set_tiles(tiles, true, false, true, true)
+			local fish = entity.surface.find_entities_filtered{area=entity.selection_box, type="fish"}
+			for _,f in pairs(fish) do
+				f.destroy()
+			end
+			entity.minable = false
 		end
-		entity.minable = false
 	else
 		-- if the building is placed on foundation, then prevent that foundation from being deconstructed if it's marked that way
 		local foundations = entity.surface.find_entities_filtered{area=entity.bounding_box, name=foundation}
